fix: resized gaps between divs

--- a/style.css
+++ b/style.css
@@ -3,16 +3,18 @@
 *::after {
     box-sizing: border-box;
 }
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 .container {
     display: flex;
     flex-direction: column;
     align-items:center;
-    height: auto;
     justify-content: center;
-    height: 800px;
-    width: 100%;
     font-size: 48px;
-
+    flex-grow: 1;
 }
 
 .header {
@@ -42,6 +44,7 @@ div > img:hover {
 button {
     padding: 50px;
     font-size: 25px;
+    margin-bottom: auto;
 }
 
 .footer {
